--- a/Titlebar Enabled/userChrome.css
+++ b/Titlebar Enabled/userChrome.css
@@ -328,12 +328,16 @@ Normal mode
 }
 
 /*** URLBAR + MEGABAR ***/
-:root #urlbar {
-    --urlbar-min-height: 25px !important;
-    --urlbar-max-height: 25px !important;
+#urlbar[breakout][breakout-extend][breakout-extend-animate],
+#urlbar[breakout][breakout-extend],
+#urlbar[breakout] {
+    --urlbar-height: 25px !important;
+    --urlbar-toolbar-height: 25px !important;
+    top: 10px !important;
+    left: 0px !important;
+    width: 100% !important;
 }
 #urlbar-input-container label {
-    margin: 2px 0px !important;
     line-height: 15px !important;
 }
 #urlbar-container,
@@ -341,23 +345,14 @@ Normal mode
     -moz-window-dragging: drag !important;
 }
 #urlbar-input-container {
-    border-radius: 3px !important;
-}
-#urlbar[breakout][breakout-extend] {
-    left: calc(0 * var(--urlbar-margin-inline)) !important;
-    width: calc(100% + 0 * var(--urlbar-margin-inline)) !important;
-}
-#urlbar[breakout][breakout-extend][breakout-extend-animate] {
-    top: 10px !important;
-}
-#urlbar[breakout][breakout-extend][breakout-extend-animate] > #urlbar-input-container {
     height: 24px !important;
-    padding-block: 1px !important;
-    padding-inline: 1px !important;
-    margin: -1px 0px 2px 0px !important;
+    border-radius: 3px !important;
+    padding: 0px 0px 1px 0px !important;
 }
 #urlbar, #searchbar {
     -moz-window-dragging: no-drag !important;
+}
+#urlbar {
     min-height: 25px !important;
 }
 #searchbar {
@@ -365,7 +360,7 @@ Normal mode
 }
 #urlbar[focused="true"] {
     border: 1px solid silver !important;
-    border-radius: 4px !important; 
+    border-radius: 4px !important;
     background: #ffffff !important;
 }
 #searchbar[focused="true"] {
@@ -393,10 +388,10 @@ Normal mode
     outline: none !important;
 }
 #PopupSearchAutoComplete {
-    border-radius: 0 0 7px 7px !important;
+    border-radius: 3px !important;
 }
 .urlbar-icon:not(.search-go-button):not(#urlbar-go-button) {
-    min-height: 19px !important;
+    height: 19px !important;
     margin: -4px 0px !important;
 }
 .urlbar-page-action, #notification-popup-box {
@@ -424,7 +419,7 @@ Normal mode
     margin: 0px 4px !important;
 }
 #urlbar .search-one-offs:not([hidden]) {
-    padding-block: 5px !important;
+    padding-block: 2px !important;
     min-height: 25px !important;
 }
 .search-one-offs[is_searchbar="true"]) {
