--- a/base.css
+++ b/base.css
@@ -336,9 +336,14 @@ Normal mode
 }
 
 /*** URLBAR + MEGABAR ***/
-:root {
-    --urlbar-min-height: 25px !important;
-    --urlbar-max-height: 25px !important;
+#urlbar[breakout][breakout-extend][breakout-extend-animate],
+#urlbar[breakout][breakout-extend],
+#urlbar[breakout] {
+    --urlbar-height: 25px !important;
+    --urlbar-toolbar-height: 25px !important;
+    top: 10px !important;
+    left: 0px !important;
+    width: 100% !important;
 }
 #urlbar-input-container label {
     line-height: 15px !important;
@@ -348,23 +353,14 @@ Normal mode
     -moz-window-dragging: drag !important;
 }
 #urlbar-input-container {
-    border-radius: 3px !important;
-}
-#urlbar[breakout][breakout-extend] {
-    left: calc(0 * var(--urlbar-margin-inline)) !important;
-    width: calc(100% + 0 * var(--urlbar-margin-inline)) !important;
-}
-#urlbar[breakout][breakout-extend][breakout-extend-animate] {
-    top: 10px !important;
-}
-#urlbar[breakout][breakout-extend][breakout-extend-animate] > #urlbar-input-container {
     height: 24px !important;
-    padding-block: 1px !important;
-    padding-inline: 1px !important;
-    margin: -1px 0px 2px 0px !important;
+    border-radius: 3px !important;
+    padding: 0px 0px 1px 0px !important;
 }
 #urlbar, #searchbar {
     -moz-window-dragging: no-drag !important;
+}
+#urlbar {
     min-height: 25px !important;
 }
 #searchbar {
@@ -372,7 +368,7 @@ Normal mode
 }
 #urlbar[focused="true"] {
     border: 1px solid silver !important;
-    border-radius: 4px !important; 
+    border-radius: 4px !important;
     background: #ffffff !important;
 }
 #searchbar[focused="true"] {
